fix background too large try

--- a/client/src/components/quizzcontroller/quizzcontroller.scss
+++ b/client/src/components/quizzcontroller/quizzcontroller.scss
@@ -5,7 +5,8 @@
   align-items: center;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
+  max-height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.7),
